--- a/README
+++ b/README
@@ -4,6 +4,12 @@
 Git revisions folder.
 Created to revise Git command lines.
 
+## How to use?
+- make sure you read and understand [the disclamer](DISCLAMER) first
+- make sure you read [how to contribute](CONTRIBUTING) if you want to participate
+- navigate in the project as you want by clicking th different packages and files
+- or use the [files menu](MENU)
+
 ## Author : 
 
 Popysid
@@ -14,7 +20,7 @@ Popysid
 
 ## Licence : 
 
-CC0 1.0 Universal Licence 
+CC0 1.0 Universal Licence (See [Licence](LICENCE) for more information)
 
 ## Usages et modifications :
 
