corrected typo in disclaimer, updated menu and reeadme

--- a/README
+++ b/README
@@ -5,7 +5,7 @@ Git revisions folder.
 Created to revise Git command lines.
 
 ## How to use?
-- make sure you read and understand [the disclamer](DISCLAMER) first
+- make sure you read and understand [the disclaimer](DISCLAIMER) first
 - make sure you read [how to contribute](CONTRIBUTING) if you want to participate
 - navigate in the project as you want by clicking th different packages and files
 - or use the [files menu](MENU)
